Updated with version: 3.18.0 changes

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1613,6 +1613,14 @@
     "message":"Препоръчва се го запазите. Ако абонаментът е прекратен неволно, моля, изберете „EasyList“ пак, за да блокирате повече реклами.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
   },
+  "easylist_lite_disable_done":{
+    "message":"AdBlock ползва EasyList Lite или EasyList за блокиране на реклами в повечето сайтове.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
+  "easylist_lite_disable_how_to_reenable":{
+    "message":"препоръчва се да го запазите. Ако абонаментът е прекратен неволно, моля, изберете „EasyList Lite“ или „EasyList“ пак, за да блокирате повечето реклами.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "acceptable_ads_content_blocking_disbled_message":{
     "message":"Абонаментът за Приемливи реклами е прекратен, защото включихте блокиране на съдържание в Safari. По едно и също време можете да разрешите или едното, или другото. ([[Защо?]])",
     "description":"Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
