--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1613,6 +1613,14 @@
     "message":"Recomanem mantenir-ho activat. Si heu cancel·lat la subscripció per error, seleccioneu «EasyList» per bloquejar més anuncis.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
   },
+  "easylist_lite_disable_done":{
+    "message":"L'AdBlock utilitza EasyList Lite o EasyList per bloquejar anuncis en la majoria dels llocs web.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
+  "easylist_lite_disable_how_to_reenable":{
+    "message":"Recomanem mantenir-ho activat. Si heu cancel·lat la subscripció per error, seleccioneu «EasyList Lite» or «EasyList» per bloquejar més anuncis.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "acceptable_ads_content_blocking_disbled_message":{
     "message":"Hem cancel·lat la seva subscripció dels Anuncis Acceptables, ja que heu activat el bloqueig de contingut de Safari. Només en podeu seleccionar un a la vegada. ([[Per què?]])",
     "description":"Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
