--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -455,6 +455,10 @@
     "message":"Malware protection",
     "description":"A filter list"
   },
+  "filterbitcoin_mining_protection":{
+    "message":"Cryptocurrency (Bitcoin) Mining Protection List",
+    "description":"A filter list"
+  },
   "filterlatvian":{
     "message":"Latvian",
     "description":"A filter list"
