--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -12,7 +12,7 @@
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
   "description_yt":{
-    "message":"Az egyetlen YouTube hirdetésblokkoló az AdBlock jóvoltából, a legnépszerűbb Chrome bővítmény 60 millió felhasználóval világszerte",
+    "message":"Az egyetlen YouTube™ hirdetésblokkoló az AdBlock jóvoltából, a legnépszerűbb Chrome bővítmény 60 millió felhasználóval világszerte",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
@@ -48,7 +48,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"AdBlock a YouTube-on opciók",
+    "message":"AdBlock a YouTube™-on opciók",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -528,7 +528,7 @@
     "description":"Warning when manually editing filters."
   },
   "filtersavewarning_ytadblock_1":{
-    "message":"Legyen óvatos: Ha itt hibát vét, az AdBlock a YouTube-on megfelelő működése akár le is állhat.",
+    "message":"Legyen óvatos: Ha itt hibát vét, az AdBlock a YouTube™-on megfelelő működése akár le is állhat.",
     "description":"First part of the warning when manually editing filters in the 'AdBlock on YouTube' extension."
   },
   "filtersavewarning_ytadblock_2":{
@@ -1124,7 +1124,7 @@
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list."
   },
   "disabled_by_filter_lists_yt":{
-    "message":"Sajnáljuk, az AdBlock a YouTube-on le van tiltva ezen az oldalon az egyik opció által.",
+    "message":"Sajnáljuk, az AdBlock a YouTube™-on le van tiltva ezen az oldalon az egyik opció által.",
     "description":"Message shown when a user tries to un-whitelist a web page that has been whitelisted by a rule in a subscribed filter list. Specific to the 'AdBlock on YouTube' extension."
   },
   "dont_run_on_pages_on_domain":{
@@ -1320,15 +1320,15 @@
     "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
   },
   "block_ads_on_youtube":{
-    "message":"Hirdetések eltávolítása a YouTube-on",
+    "message":"Hirdetések eltávolítása a YouTube™-on",
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
   },
   "block_privacy_on_youtube":{
-    "message":"Adataim megvédése a YouTube-on",
+    "message":"Adataim megvédése a YouTube™-on",
     "description":"Checkbox letting user choose whether to block privacy-related requests on youtube.com"
   },
   "block_annonyances_on_youtube":{
-    "message":"Zavaró tényezők törlése a YouTube-on",
+    "message":"Zavaró tényezők törlése a YouTube™-on",
     "description":"Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel":{
@@ -1378,11 +1378,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Bizonyos YouTube csatornák fehérlistára tételének engedélyezése (a böngésző újraindítását igényli)",
+    "message":"Bizonyos YouTube™ csatornák fehérlistára tételének engedélyezése (a böngésző újraindítását igényli)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Tegyen fehérlistára minden feliratkozott YouTube csatornát",
+    "message":"Tegyen fehérlistára minden feliratkozott YouTube™ csatornát",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1390,7 +1390,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Minden YouTube-csatorna feliratkozás fehérlistára került",
+    "message":"Minden YouTube™-csatorna feliratkozás fehérlistára került",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "allow_ads_all_youtube_channels":{
@@ -1450,7 +1450,7 @@
     "description":"Subtitle on the Support tab"
   },
   "ytadblockupdates":{
-    "message":"AdBlock a YouTube-on frissítések",
+    "message":"AdBlock a YouTube™-on frissítések",
     "description":"Subtitle on the Support tab. Specific to the 'AdBlock on YouTube' extension."
   },
   "whatmakesadblocktick":{
