--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -1126,11 +1126,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Membolehkan akses kanal YouTube tertentu (memerlukan restart browser Anda)",
+    "message":"Membolehkan akses kanal YouTube™ tertentu (memerlukan restart browser Anda)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Izinkan semua kanal langganan Youtube",
+    "message":"Izinkan semua kanal langganan YouTube™",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
