--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -12,7 +12,7 @@
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
   "description_yt":{
-    "message":"L'unico Ad blocker per YouTube è creato da AdBlock, l'estensione di Chrome più popolare con 60 milioni di utenti in tutto il mondo",
+    "message":"L'unico Ad blocker per YouTube™ è creato da AdBlock, l'estensione di Chrome più popolare con 60 milioni di utenti in tutto il mondo",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
@@ -48,7 +48,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"AdBlock su YouTube Opzioni",
+    "message":"AdBlock su YouTube™ Opzioni",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -528,7 +528,7 @@
     "description":"Warning when manually editing filters."
   },
   "filtersavewarning_ytadblock_1":{
-    "message":"Attenzione: se commetti un errore qui, AdBlock su YouTube potrebbe smettere di funzionare correttamente.",
+    "message":"Attenzione: se commetti un errore qui, AdBlock su YouTube™ potrebbe smettere di funzionare correttamente.",
     "description":"First part of the warning when manually editing filters in the 'AdBlock on YouTube' extension."
   },
   "filtersavewarning_ytadblock_2":{
@@ -1312,15 +1312,15 @@
     "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
   },
   "block_ads_on_youtube":{
-    "message":"Rimuovi gli annunci su YouTube",
+    "message":"Rimuovi gli annunci su YouTube™",
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
   },
   "block_privacy_on_youtube":{
-    "message":"Proteggi la mia privacy su YouTube",
+    "message":"Proteggi la mia privacy su YouTube™",
     "description":"Checkbox letting user choose whether to block privacy-related requests on youtube.com"
   },
   "block_annonyances_on_youtube":{
-    "message":"Rimuovi i fastidi su YouTube",
+    "message":"Rimuovi i fastidi su YouTube™",
     "description":"Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel":{
@@ -1370,11 +1370,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Consenti di mettere in whitelist specifici canali YouTube (sarà necessario riavviare il browser)",
+    "message":"Consenti di mettere in whitelist specifici canali YouTube™ (sarà necessario riavviare il browser)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Metti in Whitelist tutti i canali YouTube sottoscritti",
+    "message":"Metti in Whitelist tutti i canali YouTube™ sottoscritti",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1382,7 +1382,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Tutte le sottoscrizioni ai canali YouTube sono state inserite nella whitelist",
+    "message":"Tutte le sottoscrizioni ai canali YouTube™ sono state inserite nella whitelist",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "whitelist_youtube_channel":{
@@ -1434,7 +1434,7 @@
     "description":"Subtitle on the Support tab"
   },
   "ytadblockupdates":{
-    "message":"Aggiornamenti di AdBlock su YouTube",
+    "message":"Aggiornamenti di AdBlock su YouTube™",
     "description":"Subtitle on the Support tab. Specific to the 'AdBlock on YouTube' extension."
   },
   "whatmakesadblocktick":{
