--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1370,11 +1370,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"特定のYouTubeチャンネルのホワイトリストを許可する（ブラウザの再起動が必要です）",
+    "message":"特定のYouTube™チャンネルのホワイトリストを許可する（ブラウザの再起動が必要です）",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"すべてのチャンネル登録しているYouTubeチャンネルをホワイトリストに登録する",
+    "message":"すべてのチャンネル登録しているYouTube™チャンネルをホワイトリストに登録する",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1382,7 +1382,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"すべてのチャンネル登録しているYouTubeチャンネルがホワイトリストに登録されました",
+    "message":"すべてのチャンネル登録しているYouTube™チャンネルがホワイトリストに登録されました",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "whitelist_youtube_channel":{
