--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -12,7 +12,7 @@
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
   "description_yt":{
-    "message":"De enigste ad-blocker voor YouTube ontwikkeld door AdBlock, de meest populaire Chrome extensie met 60 miljoen gebruikers wereldwijd",
+    "message":"De enigste ad-blocker voor YouTube™ ontwikkeld door AdBlock, de meest populaire Chrome extensie met 60 miljoen gebruikers wereldwijd",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
@@ -48,7 +48,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"AdBlock op YouTube Opties",
+    "message":"AdBlock op YouTube™ Opties",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -1248,11 +1248,11 @@
     "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
   },
   "block_ads_on_youtube":{
-    "message":"Verwijder advertenties op YouTube",
+    "message":"Verwijder advertenties op YouTube™",
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
   },
   "block_privacy_on_youtube":{
-    "message":"Bescherm mijn privacy op YouTube",
+    "message":"Bescherm mijn privacy op YouTube™",
     "description":"Checkbox letting user choose whether to block privacy-related requests on youtube.com"
   },
   "show_devtools_panel":{
@@ -1302,11 +1302,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Sta het uitsluiten toe van specifieke YouTube-kanalen (vereist het opnieuw opstarten van uw browser)",
+    "message":"Sta het uitsluiten toe van specifieke YouTube™-kanalen (vereist het opnieuw opstarten van uw browser)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Sluit alle kanalen van YouTube uit waarop ik geabonneerd bent",
+    "message":"Sluit alle kanalen van YouTube™ uit waarop ik geabonneerd bent",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1314,7 +1314,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Al je YouTube kanaal abonnementen zijn uitgesloten",
+    "message":"Al je YouTube™ kanaal abonnementen zijn uitgesloten",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "whitelist_youtube_channel":{
