--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -12,7 +12,7 @@
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
-    "message":"AdBlock no YouTube",
+    "message":"AdBlock no YouTube™",
     "description":"Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
   },
   "adblock_click_for_details":{
@@ -44,7 +44,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"AdBlock no YouTube - Opções",
+    "message":"AdBlock no YouTube™ - Opções",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -1286,7 +1286,7 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Permitir lista branca de canais específicos de YouTube (requer reiniciar o seu navegador)",
+    "message":"Permitir lista branca de canais específicos de YouTube™ (requer reiniciar o seu navegador)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_youtube_channel":{
@@ -1338,7 +1338,7 @@
     "description":"Subtitle on the Support tab"
   },
   "ytadblockupdates":{
-    "message":"Atualizações AdBlock no YouTube",
+    "message":"Atualizações AdBlock no YouTube™",
     "description":"Subtitle on the Support tab. Specific to the 'AdBlock on YouTube' extension."
   },
   "whatmakesadblocktick":{
