--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -1294,11 +1294,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Omogoči dodajanje nekaterih YouTube kanalov na listo dovoljenih (potrebno je ponovno zagnati brskalnik)",
+    "message":"Omogoči dodajanje nekaterih YouTube™ kanalov na listo dovoljenih (potrebno je ponovno zagnati brskalnik)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Prikazuj oglase na vseh naročenih YouTube kanalih",
+    "message":"Prikazuj oglase na vseh naročenih YouTube™ kanalih",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1306,7 +1306,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Na vseh YouTube kanalih, na katere ste naročeni, so oglasi zdaj dovoljeni",
+    "message":"Na vseh YouTube™ kanalih, na katere ste naročeni, so oglasi zdaj dovoljeni",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "whitelist_youtube_channel":{
