--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -8,7 +8,7 @@
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
-    "message":"AdBlock på YouTube",
+    "message":"AdBlock på YouTube™",
     "description":"Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
   },
   "adblock_click_for_details":{
@@ -40,7 +40,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"AdBlock på YouTube-alternativ",
+    "message":"AdBlock på YouTube™-alternativ",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "operabutton_how_to_hide2":{
@@ -1156,11 +1156,11 @@
     "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
   },
   "block_ads_on_youtube":{
-    "message":"Ta bort annonser på YouTube",
+    "message":"Ta bort annonser på YouTube™",
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
   },
   "block_privacy_on_youtube":{
-    "message":"Skydda mitt privatliv på YouTube",
+    "message":"Skydda mitt privatliv på YouTube™",
     "description":"Checkbox letting user choose whether to block privacy-related requests on youtube.com"
   },
   "show_devtools_panel":{
@@ -1258,7 +1258,7 @@
     "description":"Subtitle on the Support tab"
   },
   "ytadblockupdates":{
-    "message":"AdBlock på YouTube-uppdateringar",
+    "message":"AdBlock på YouTube™-uppdateringar",
     "description":"Subtitle on the Support tab. Specific to the 'AdBlock on YouTube' extension."
   },
   "whatmakesadblocktick":{
