--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -12,7 +12,7 @@
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
   "description_yt":{
-    "message":"Блокувальник реклами для YouTube на базі AdBlock, найпопулярнішого розширення Chrome із 60 мільйонами користувачів по всьому світу",
+    "message":"Блокувальник реклами для YouTube™ на базі AdBlock, найпопулярнішого розширення Chrome із 60 мільйонами користувачів по всьому світу",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
@@ -48,7 +48,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"Параметри AdBlock на YouTube",
+    "message":"Параметри AdBlock на YouTube™",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -520,7 +520,7 @@
     "description":"Warning when manually editing filters."
   },
   "filtersavewarning_ytadblock_1":{
-    "message":"Будьте обережні: якщо ви зробите помилку тут, AdBlock на YouTube може припинити працювати належним чином.",
+    "message":"Будьте обережні: якщо ви зробите помилку тут, AdBlock на YouTube™ може припинити працювати належним чином.",
     "description":"First part of the warning when manually editing filters in the 'AdBlock on YouTube' extension."
   },
   "filtersavewarning_ytadblock_2":{
@@ -1284,15 +1284,15 @@
     "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
   },
   "block_ads_on_youtube":{
-    "message":"Прибрати рекламу на YouTube",
+    "message":"Прибрати рекламу на YouTube™",
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
   },
   "block_privacy_on_youtube":{
-    "message":"Захистити мою конфіденційність на YouTube",
+    "message":"Захистити мою конфіденційність на YouTube™",
     "description":"Checkbox letting user choose whether to block privacy-related requests on youtube.com"
   },
   "block_annonyances_on_youtube":{
-    "message":"Прибрати анонси на YouTube",
+    "message":"Прибрати анонси на YouTube™",
     "description":"Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel":{
@@ -1342,11 +1342,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Дозволити білий список певних YouTube каналів (треба буде перезавантажити ваш браузер)",
+    "message":"Дозволити білий список певних YouTube™ каналів (треба буде перезавантажити ваш браузер)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Білий список всіх YouTube каналів, на які ви відписані",
+    "message":"Білий список всіх YouTube™ каналів, на які ви відписані",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1354,7 +1354,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Всі YouTube канали, на які ви підписані, були додані до білого списку",
+    "message":"Всі YouTube™ канали, на які ви підписані, були додані до білого списку",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "whitelist_youtube_channel":{
@@ -1406,7 +1406,7 @@
     "description":"Subtitle on the Support tab"
   },
   "ytadblockupdates":{
-    "message":"Оновлення AdBlock на YouTube",
+    "message":"Оновлення AdBlock на YouTube™",
     "description":"Subtitle on the Support tab. Specific to the 'AdBlock on YouTube' extension."
   },
   "whatmakesadblocktick":{
