--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -1346,11 +1346,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Cho phép một số kênh YouTube cụ thể vào danh sách trắng (yêu cầu khởi động lại trình duyệt)",
+    "message":"Cho phép một số kênh YouTube™ cụ thể vào danh sách trắng (yêu cầu khởi động lại trình duyệt)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Danh sách trắng tất cả những kênh YouTube đã đăng ký",
+    "message":"Danh sách trắng tất cả những kênh YouTube™ đã đăng ký",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1358,7 +1358,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Tất cả những kênh YouTube bạn đăng ký đã được đưa vào danh sách trắng",
+    "message":"Tất cả những kênh YouTube™ bạn đăng ký đã được đưa vào danh sách trắng",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "allow_ads_all_youtube_channels":{
