--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -1298,11 +1298,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Salli tiettyjen Youtube-kanavien lisäys poikkeus-listalle (vaatii selaimen uudelleen käynnistämisen)",
+    "message":"Salli tiettyjen YouTube™-kanavien lisäys poikkeus-listalle (vaatii selaimen uudelleen käynnistämisen)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Lisää kaikki tilatut Youtube-kanavat poikkeus-listalle",
+    "message":"Lisää kaikki tilatut YouTube™-kanavat poikkeus-listalle",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1310,7 +1310,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Kaikki sinun Youtube kanava tilauksesi on lisätty sallittu-listalle",
+    "message":"Kaikki sinun YouTube™ kanava tilauksesi on lisätty sallittu-listalle",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "whitelist_youtube_channel":{
