--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -1378,11 +1378,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Omogući dodavanje na listu dopuštenog određenih YouTube kanala (potrebno je ponovo pokrenuti preglednik)",
+    "message":"Omogući dodavanje na listu dopuštenog određenih YouTube™ kanala (potrebno je ponovo pokrenuti preglednik)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Dopusti reklame na svim pretplaćenim YouTube kanalima",
+    "message":"Dopusti reklame na svim pretplaćenim YouTube™ kanalima",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1390,7 +1390,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Na svim vašim pretplaćenim YouTube kanalima su dopušteni oglasi",
+    "message":"Na svim vašim pretplaćenim YouTube™ kanalima su dopušteni oglasi",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "allow_ads_all_youtube_channels":{
