--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -48,7 +48,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"AdBlock no YouTube - Opções",
+    "message":"AdBlock no YouTube™ - Opções",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -1320,15 +1320,15 @@
     "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
   },
   "block_ads_on_youtube":{
-    "message":"Remover anúncios no YouTube",
+    "message":"Remover anúncios no YouTube™",
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
   },
   "block_privacy_on_youtube":{
-    "message":"Proteger a minha privacidade no YouTube",
+    "message":"Proteger a minha privacidade no YouTube™",
     "description":"Checkbox letting user choose whether to block privacy-related requests on youtube.com"
   },
   "block_annonyances_on_youtube":{
-    "message":"Remover incômodos no YouTube",
+    "message":"Remover incômodos no YouTube™",
     "description":"Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel":{
@@ -1378,11 +1378,11 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Permitir lista branca de canais específicos de YouTube (requer reiniciar o seu navegador)",
+    "message":"Permitir lista branca de canais específicos de YouTube™ (requer reiniciar o seu navegador)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Coloque na lista branca todas as inscrições de canais do YouTube",
+    "message":"Coloque na lista branca todas as inscrições de canais do YouTube™",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
@@ -1390,7 +1390,7 @@
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Todas as suas assinaturas de canais do YouTube foram colocadas na lista branca",
+    "message":"Todas as suas assinaturas de canais do YouTube™ foram colocadas na lista branca",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "allow_ads_all_youtube_channels":{
@@ -1450,7 +1450,7 @@
     "description":"Subtitle on the Support tab"
   },
   "ytadblockupdates":{
-    "message":"Atualizações AdBlock no YouTube",
+    "message":"Atualizações AdBlock no YouTube™",
     "description":"Subtitle on the Support tab. Specific to the 'AdBlock on YouTube' extension."
   },
   "whatmakesadblocktick":{
