--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -1306,19 +1306,19 @@
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
-    "message":"Belirli Youtube kanalları için beyaz listeye izin ver (tarayıcınızı yeniden başlatmayı gerektirir)",
+    "message":"Belirli YouTube™ kanalları için beyaz listeye izin ver (tarayıcınızı yeniden başlatmayı gerektirir)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Takip edilen tüm YouTube kanallarını izin verilenlere ekle",
+    "message":"Takip edilen tüm YouTube™ kanallarını izin verilenlere ekle",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled."
   },
   "one_moment_all_youtube_channels":{
-    "message":"YouTube takip bilgilerini alırken lütfen biraz bekleyin",
+    "message":"YouTube™ takip bilgilerini alırken lütfen biraz bekleyin",
     "description":"Alert displayed when whitelisting all subscribed YouTube channels"
   },
   "all_youtube_channels_complete":{
-    "message":"Takip ettiğiniz tüm YouTube kanalları izin verilenlere eklendi",
+    "message":"Takip ettiğiniz tüm YouTube™ kanalları izin verilenlere eklendi",
     "description":"Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "whitelist_youtube_channel":{
